--- a/burgerQueen/src/app/login/login.component.html
+++ b/burgerQueen/src/app/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>login</title>
+</head>
+<body>
+  <div class="containerLogin" id="containerLogin">
+    <div class="divLogin" id="divLogin">
+      <h2>Inicia Sesión</h2>
+      <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
+      <div>
+        <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
+        <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
+      </div>
+      <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar">
+      <a href="">Olvidé mi contraseña</a>
+      <a routerLink="/app-sign-up" routerLinkActive="activebutton">Quiero registrarme</a>
+    </div>
+  </div>
+</body>
+</html>
