--- a/burgerQueen/src/app/login/login.component.scss
+++ b/burgerQueen/src/app/login/login.component.scss
@@ -2,22 +2,29 @@
   $color-melon: #F1D5BB;
   $color-marron: #3C2213;
 
-  divLogin{
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .divLogin{
     background: $color-melon;
+    border: none !important;
     }
   
   h2{
     color: $color-marron;
     }
-  emailLogin,
-  passLogin{
+  .emailLogin,
+  .passLogin{
     border: 1px solid #fff;
     border-radius: 1rem;
     padding: 1rem;
     width: 15rem;
     height: 1rem;
     }
-  emailLogin{
+  .emailLogin{
     background-image: url();
     }
       
