--- a/burgerQueen/src/app/login/login.component.html
+++ b/burgerQueen/src/app/login/login.component.html
@@ -15,7 +15,9 @@
         <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
         <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
       </div>
-      <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar">
+      <a routerLink="/app-menu" routerLinkActive="activebutton">
+        <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar">
+      </a>
       <a href="">Olvidé mi contraseña</a>
       <a routerLink="/app-sign-up" routerLinkActive="activebutton">Quiero registrarme</a>
     </div>
