--- a/burgerQueen/src/app/menu/menu.component.html
+++ b/burgerQueen/src/app/menu/menu.component.html
@@ -1,7 +1,31 @@
-<div *ngFor="let item of items">
-    <div>
-        <h4> {{ item.title }} </h4>
-        <h3>{{ '$' + item.price }} </h3>
-        <img src="../img-menu/{{ item.img }}">
+<div> 
+    <h2>Platos</h2>
+    <div *ngFor="let item of menu.platos">
+        <div>
+            <h4> {{ item.title }} </h4>
+            <h3>{{ '$' + item.price }} </h3>
+            <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
+            <input type="button" value="{{ item.btnValue }}">
+        </div>
+    </div>
+
+    <h2>Aperitivos</h2>
+    <div *ngFor="let item of menu.aperitivos">
+        <div>
+            <h4> {{ item.title }} </h4>
+            <h3>{{ '$' + item.price }} </h3>
+            <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
+            <input type="button" value="{{ item.btnValue }}">
+        </div>
+    </div>
+
+    <h2>Bebidas</h2>
+    <div *ngFor="let item of menu.bebidas">
+        <div>
+            <h4> {{ item.title }} </h4>
+            <h3>{{ '$' + item.price }} </h3>
+            <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
+            <input type="button" value="{{ item.btnValue }}">
+        </div>
     </div>
 </div>
