--- a/burgerQueen/src/app/menu/menu.component.html
+++ b/burgerQueen/src/app/menu/menu.component.html
@@ -2,8 +2,10 @@
     <h2>Platos</h2>
     <div *ngFor="let item of menu.platos">
         <div>
-            <h4> {{ item.title }} </h4>
-            <h3>{{ '$' + item.price }} </h3>
+            <div>
+                <h4> {{ item.title }} </h4>
+                <h3>{{ '$' + item.price }} </h3>
+            <div>
             <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
             <input type="button" value="{{ item.btnValue }}">
         </div>
@@ -12,8 +14,10 @@
     <h2>Aperitivos</h2>
     <div *ngFor="let item of menu.aperitivos">
         <div>
-            <h4> {{ item.title }} </h4>
-            <h3>{{ '$' + item.price }} </h3>
+            <div>
+                <h4> {{ item.title }} </h4>
+                <h3>{{ '$' + item.price }} </h3>
+            </div>
             <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
             <input type="button" value="{{ item.btnValue }}">
         </div>
@@ -22,8 +26,10 @@
     <h2>Bebidas</h2>
     <div *ngFor="let item of menu.bebidas">
         <div>
-            <h4> {{ item.title }} </h4>
-            <h3>{{ '$' + item.price }} </h3>
+            <div>
+                <h4> {{ item.title }} </h4>
+                <h3>{{ '$' + item.price }} </h3>
+            </div>  
             <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
             <input type="button" value="{{ item.btnValue }}">
         </div>
