--- a/burgerQueen/src/app/menu/menu.component.html
+++ b/burgerQueen/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
             <div>
                 <h4> {{ item.title }} </h4>
                 <h3>{{ '$' + item.price }} </h3>
-            <div>
+            </div>
             <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
             <input type="button" value="{{ item.btnValue }}">
         </div>
