--- a/burgerQueen/src/app/login/login.component.scss
+++ b/burgerQueen/src/app/login/login.component.scss
@@ -2,22 +2,22 @@
   $color-melon: #F1D5BB;
   $color-marron: #3C2213;
 
-  divLogin{
+  .divLogin{
     background: $color-melon;
-    }
-  
-  h2{
-    color: $color-marron;
-    }
-  emailLogin,
-  passLogin{
-    border: 1px solid #fff;
-    border-radius: 1rem;
-    padding: 1rem;
-    width: 15rem;
-    height: 1rem;
-    }
-  emailLogin{
-    background-image: url();
+    width: 500px;
+    h2{
+      color: $color-marron;
+      }
+    .emailLogin,
+    .passLogin{
+      border: 1px solid #fff;
+      border-radius: 1rem;
+      padding: 1rem;
+      width: 15rem;
+      height: 1rem;
+      }
+    .emailLogin{
+      background-image: url();
+      }
     }
       
