Probando ruteo con módulos

--- a/burgerQueen/src/app/ingreso/welcome/welcome.component.html
+++ b/burgerQueen/src/app/ingreso/welcome/welcome.component.html
@@ -1,6 +1,6 @@
   <div class="mainContainer">
     <h4>Bienvenidos a</h4>
     <h2>Burger House</h2>
-    <input type="submit" value="Iniciar Sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" 
-    routerLink="/app-login" routerLinkActive="activebutton">
+    <button routerLink="/app-login">Login</button>
+    <!-- <input type="submit" value="Iniciar Sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" routerLink="/app-login" routerLinkActive="activebutton"> -->
   </div>
