--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="containerLogin" id="containerLogin">
-    <div class="divLogin" id="divLogin">
-      <h2>Inicia Sesión</h2>
-      <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
-      <div>
-        <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-        <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
-      </div>
-        <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar" 
-        routerLink="/app-menu" routerLinkActive="activebutton">
+  <div class="divLogin" id="divLogin">
+    <h2>Inicia Sesión</h2>
+    <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
+    <div>
+      <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
+      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
     </div>
+    <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar" 
+      routerLink="/login" routerLinkActive="activebutton">
+  </div>
 </div>
