Correcciones en ruteo del módulo Ingreso (Welcome y Login)

--- a/burgerQueen/src/app/ingreso/welcome/welcome.component.html
+++ b/burgerQueen/src/app/ingreso/welcome/welcome.component.html
@@ -1,5 +1,5 @@
   <div class="mainContainer">
     <h4>Bienvenidos a</h4>
     <h2>Burger House</h2>
-    <input type="button" value="Iniciar sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" routerLink="/ingreso/login" routerLinkActive="activebutton">
+    <input type="button" value="Iniciar sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" routerLink="/login" routerLinkActive="activebutton">
   </div>
