--- a/burgerQueen/src/app/atencion/menu/menu.component.html
+++ b/burgerQueen/src/app/atencion/menu/menu.component.html
@@ -1,37 +1,54 @@
-<div> 
-  <h2>Platos</h2>
-  <div *ngFor="let item of menu.platos">
-      <div>
-          <div>
-              <h4> {{ item.title }} </h4>
-              <h3>{{ '$' + item.price }} </h3>
-          </div>
-          <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
-          <input type="button" value="{{ item.btnValue }}">
-      </div>
-  </div>
+<div>
+    <section>
+    <h2>Platos</h2>
+        <div *ngFor="let hamburguesa of menu.hamburguesas">
+            <div>
+                <div>
+                    <h4> {{ hamburguesa.title }} </h4>
+                    <h3>{{ 's/.' + hamburguesa.price }} </h3>
+                </div>
+                <img src="../../assets/img-menu/{{ hamburguesa.img }}" width="115px" height="115px">
+                <input type="button" value="Ver opciones" routerLink="" routerLinkActive="activebutton">
+            </div>
+        </div>
 
-  <h2>Aperitivos</h2>
-  <div *ngFor="let item of menu.aperitivos">
-      <div>
-          <div>
-              <h4> {{ item.title }} </h4>
-              <h3>{{ '$' + item.price }} </h3>
-          </div>
-          <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
-          <input type="button" value="{{ item.btnValue }}">
-      </div>
-  </div>
+        <div *ngFor="let sandwich of menu.sandwiches">
+            <div>
+                <div>
+                    <h4> {{ sandwich.title }} </h4>
+                    <h3>{{ 's/.' + sandwich.price }} </h3>
+                </div>
+                <img src="../../assets/img-menu/{{ sandwich.img }}" width="115px" height="115px">
+                <input type="button" value="Añadir">
+            </div>
+        </div>
+    </section>
 
-  <h2>Bebidas</h2>
-  <div *ngFor="let item of menu.bebidas">
-      <div>
-          <div>
-              <h4> {{ item.title }} </h4>
-              <h3>{{ '$' + item.price }} </h3>
-          </div>  
-          <img src="../../assets/img-menu/{{ item.img }}" width="115px" height="115px">
-          <input type="button" value="{{ item.btnValue }}">
-      </div>
-  </div>
+   <section> 
+        <h2>Aperitivos</h2>
+        <div *ngFor="let aperitivo of menu.aperitivos">
+            <div>
+                <div>
+                    <h4> {{ aperitivo.title }} </h4>
+                    <h3>{{ 's/.' + aperitivo.price }} </h3>
+                </div>
+                <img src="../../assets/img-menu/{{ aperitivo.img }}" width="115px" height="115px">
+                <input type="button" value="Añadir">
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Bebidas</h2>
+        <div *ngFor="let bebida of menu.bebidas">
+            <div>
+                <div>
+                    <h4> {{ bebida.title }} </h4>
+                    <h3>{{ 's/.' + bebida.price }} </h3>
+                </div>
+                <img src="../../assets/img-menu/{{ bebida.img }}" width="115px" height="115px">
+                <input type="button" value="Añadir">
+            </div>
+        </div>
+    </section>
 </div>
