Estilos - Vista Carta

--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -7,6 +7,6 @@
       <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
     </div>
     <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar" 
-      routerLink="/cámbiame" routerLinkActive="activebutton">
+      routerLink="/carta" routerLinkActive="activebutton">
   </div>
 </div>
