Prueba de ruteo y comunicación entre componentes

--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -1,6 +1,6 @@
 <h2>OPCIONES</h2>
 <div class="containerOptions">
-  <p></p>
+  <h2>{{ nombreProducto }}</h2>
   <img src="" alt="">
   <p>Tipo</p>
   <select name="type" class="type">
