--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -11,7 +11,7 @@
                     <h3>{{ 's/.' + hamburguesa.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
-                <input type="button" value="Ver opciones" routerLink="" routerLinkActive="activebutton">
+                <input type="button" value="Ver opciones" routerLink="/carta/opciones" routerLinkActive="activebutton">
             </div>
         </div>
 
