--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -1,12 +1,20 @@
 <div class="containerLogin" id="containerLogin">
   <div class="divLogin" id="divLogin">
     <h2>Inicia Sesión</h2>
-    <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
+    <select name="typeUser" id="" placeholder="tipo" autofocus>
+      <option value="t" selected disabled
+      >Seleccione tipo de usuario</option>
+      <option value="A"> Administrador</option>
+      <option value="C">Cocinero</option>
+      <option value="M">Mesero</option>
+    </select>
+    <input type="email" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div>
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
+      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" [(ngModel)]="usuario.password">
     </div>
-    <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar" 
-      routerLink="/cámbiame" routerLinkActive="activebutton">
+    <a [class]="'forgetPassword'">Olvide mi contraseña</a>
+    <input type="submit" [class]="['buttonLogin']" routerLink="/administrador" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()">
+    <input type="submit" [class]="['buttonLoginWithGoogle']" routerLink="/administrador" routerLinkActive="activebutton"  value="Google" (click)="ingresar()">
   </div>
 </div>
