--- a/burgerQueen/src/app/ingreso/welcome/welcome.component.scss
+++ b/burgerQueen/src/app/ingreso/welcome/welcome.component.scss
@@ -4,20 +4,60 @@ $color-marron: #3C2213;
 $color-blanco: #fff;
 
 .mainContainer{
-  background-image: url(../../../assets/imagenes/img-login-welcome/fondo-body.jpg);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(../../../assets/imagenes/img-login-welcome/fondo-body.jpg);
   background-size:100% 100%;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  flex-wrap: wrap;
   height: 100vh;
   overflow: hidden;
 }
 .mainContainer>h1{
   color: $color-blanco;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 400;
+  font-size: 2.5rem;
+  
 }
 
 .mainContainer>h2{
   color: $color-blanco;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: 300;
+  text-align: center;
+}
+.btnWelcomeLogin{
+  background-color: $color-melon;
+  color: #3c2213;
+  border: none;
+  padding: 0.75rem;
+  border-radius: 5px;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 400;
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1500px) {
+  .mainContainer>h1{
+    font-size: 3.75rem;
+  }
+  .mainContainer>h2{
+    font-size: 2rem;
+  }
+  .btnWelcomeLogin{
+    font-size: 1rem;
+  }
+}
+@media only screen and (min-width: 1400px) and (max-width: 2560px) {
+  .mainContainer>h1{
+    font-size: 6.25rem;
+  }
+  .mainContainer>h2{
+    font-size: 4rem;
+  }
+  .btnWelcomeLogin{
+    font-size: 1.5rem;
+  }
 }
