--- a/burgerQueen/src/app/ingreso/welcome/welcome.component.html
+++ b/burgerQueen/src/app/ingreso/welcome/welcome.component.html
@@ -1,5 +1,6 @@
   <div class="mainContainer">
     <h2>Bienvenidos a</h2>
     <h1>Burger House</h1>
-    <input type="button" value="Iniciar sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" routerLink="/login" routerLinkActive="activebutton">
+    <input type="button" value="Iniciar sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" 
+    routerLink="/login" routerLinkActive="activebutton">
   </div>
