--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -8,7 +8,7 @@
                   <h3>{{ 's/.' + hamburguesa.price }} </h3>
               </div>
               <img src="../../assets/img-carta/{{ hamburguesa.img }}" width="115px" height="115px">
-              <input type="button" value="Ver opciones" routerLink="" routerLinkActive="activebutton">
+              <input type="button" value="Ver opciones" routerLink="/cartaOpciones" routerLinkActive="activebutton">
           </div>
       </div>
 
