--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -2,11 +2,16 @@
   <div class="divLogin" id="divLogin">
     <h2>Inicia Sesión</h2>
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
+    <select name="" id="selectLogin" [(ngModel)]="rol">
+      <option value="Cocinero">Cocinero</option>
+      <option value="Mesero">Mesero</option>
+      <option value="Admin">Admin</option>
+    </select>
     <div>
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
       <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin">
     </div>
     <input type="submit" class="buttonLogin" id="buttonLogin" value="Ingresar" 
-      routerLink="/cámbiame" routerLinkActive="activebutton">
+     routerLinkActive="activebutton" (click)="multiple()">
   </div>
 </div>
