--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -8,7 +8,7 @@
             <div class="item">
                 <div class="nameAndPrice">
                     <h4> {{ hamburguesa.title }} </h4>
-                    <h3>{{ 's/.' + hamburguesa.price }} </h3>
+                    <h3>{{ 'S/.' + hamburguesa.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
                 <input type="button" value="Ver opciones" routerLink="/carta/opciones" routerLinkActive="activebutton">
@@ -19,7 +19,7 @@
             <div class="item">
                 <div class="nameAndPrice">
                     <h4> {{ sandwich.title }} </h4>
-                    <h3>{{ 's/.' + sandwich.price }} </h3>
+                    <h3>{{ 'S/.' + sandwich.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ sandwich.img }}">
                 <input type="button" value="Añadir">
@@ -36,7 +36,7 @@
             <div class="item">
                 <div class="nameAndPrice">
                     <h4> {{ aperitivo.title }} </h4>
-                    <h3>{{ 's/.' + aperitivo.price }} </h3>
+                    <h3>{{ 'S/.' + aperitivo.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ aperitivo.img }}">
                 <input type="button" value="Añadir">
@@ -53,7 +53,7 @@
             <div class="item">
                 <div class="nameAndPrice">
                     <h4> {{ bebida.title }} </h4>
-                    <h3>{{ 's/.' + bebida.price }} </h3>
+                    <h3>{{ 'S/.' + bebida.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ bebida.img }}">
                 <input type="button" value="Añadir">
