--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -7,7 +7,7 @@
         <div *ngFor="let hamburguesa of carta.hamburguesas">
             <div class="item hamb">
                 <div class="nameAndPrice">
-                    <h4 class="title"> {{ hamburguesa.title }} </h4>
+                    <h4 class="title" #name> {{ hamburguesa.title }} </h4>
                     <h3>{{ 'S/.' + hamburguesa.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
