--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -1,7 +1,7 @@
 <div class="containerOptionsLetter">
   <h2>OPCIONES</h2>
   <div class="containerOptions">
-    <p>{{ hamburgerData }}</p>
+    <p>{{ title }}</p>
     <img src="" alt="">
     <p>Tipo</p>
     <select name="type" class="type">
@@ -19,7 +19,7 @@
   </div>
   <div class="containerSubTotal">
     <p>Subtotal</p>
-    <p></p>
+    <p>S/.{{ price }}</p>
     <input type="submit" class="buttonAddOptions" id="buttonAddOptions" value="Añadir" 
         routerLink="/carta" routerLinkActive="activebutton">
   </div>
