--- a/burgerQueen/src/app/mesero/carta/carta.component.scss
+++ b/burgerQueen/src/app/mesero/carta/carta.component.scss
@@ -2,6 +2,10 @@ $color-melon: #f1d5bb;
 $color-marron: #3B2213;
 $color-rosa: #FF8087;
 
+.icon-button{
+    color: $color-marron;
+}
+
 .carta{ 
     display: flex;
     flex-direction: column;
@@ -15,8 +19,6 @@ $color-rosa: #FF8087;
     overflow-x: hidden;
 }
 
-/*---------------------*/
-
 section{
     display: flex;
     flex-direction: row;
@@ -25,6 +27,8 @@ section{
     width: 90%;
     margin: auto;
 }
+/*---------------------*/
+
 
 
 /*SUBTITLE*/
