--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -11,7 +11,8 @@
                     <h3>{{ 'S/.' + hamburguesa.price }} </h3>
                 </div>
                 <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
-                <input class="btnOptions" type="button" value="Ver opciones" (click) = "getHamburgerData(hamburguesa)" routerLink="/carta/opciones" routerLinkActive="activebutton">
+                <input class="btnOptions" type="button" value="Ver opciones" 
+                (click) = "getHamburgerData(hamburguesa)" routerLink="/carta/opciones" routerLinkActive="activebutton">
             </div>
         </div>
 
