--- a/burgerQueen/src/app/mesero/carta/carta.component.scss
+++ b/burgerQueen/src/app/mesero/carta/carta.component.scss
@@ -2,8 +2,12 @@ $color-melon: #f1d5bb;
 $color-marron: #3B2213;
 $color-rosa: #FF8087;
 
-.icon-button{
+.btnIcon{
     color: $color-marron;
+    font-size: 2em;
+    position: absolute;
+    right: 40px;
+    top: 15px;
 }
 
 .carta{ 
@@ -17,53 +21,51 @@ $color-rosa: #FF8087;
     margin: 5vh 0vh;
     overflow-y: scroll;
     overflow-x: hidden;
+
+    section{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around flex-start;
+        width: 90%;
+        margin: auto;
+    }
 }
 
-section{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around flex-start;
-    width: 90%;
-    margin: auto;
-}
 /*---------------------*/
 
-
-
 /*SUBTITLE*/
+
 .subtitle{
     width: auto;
     display: flex;
     flex-direction: column;
     margin: 10px 2px 5px 2px;
-}
-.subtitle > h2 {
-    font-family: 'Tajawal', sans-serif;
-    font-size: 24px;
-    font-weight: 100;
+
+    h2 {
+        font-family: 'Tajawal', sans-serif;
+        font-size: 24px;
+        font-weight: 100;
+    }
+    hr{
+        width: 160px;
+        margin: 2px;
+        height: 4px;
+        background-color: $color-melon;
+        border-style: none;
+    }
 }
 
 /*---------------------*/
 
-hr{
-    width: 160px;
-    margin: 2px;
-    height: 4px;
-    background-color: $color-melon;
-    border-style: none;
-}
-
-
 /*DISHES AND DRINKS*/
+
 .item{
     display: flex;
     flex-direction: column;
     width: 160px;
     margin: 5px 5px 0px 5px;
 }
-
-/*---------------------*/
 
 .nameAndPrice{
     display: flex;
@@ -75,23 +77,22 @@ hr{
     border-style: solid;
     border-color: $color-melon;
     margin: 10px 0;
+    h3, h4{
+        font-family: 'Roboto', sans-serif;
+        font-weight: 100;
+    }
+    h4{
+        font-size: 14px;
+        padding: 4px 4px 0px 4px;
+    }
+    h3{
+        font-size: 20px;
+        font-weight: 700;
+        color: $color-rosa;
+        align-self: flex-end;
+        padding: 0px 4px 1px 4px;
+    }
 }
-h3, h4{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-}
-h4{
-    font-size: 14px;
-    padding: 4px 4px 0px 4px;
-}
-h3{
-    font-size: 20px;
-    font-weight: 700;
-    color: $color-rosa;
-    align-self: flex-end;
-    padding: 0px 4px 1px 4px;
-}
-
 /*---------------------*/
 
 img{
@@ -101,7 +102,7 @@ img{
 
 /*---------------------*/
 
-input{
+.btn{
     width: 100%;
     height: 40px;
     margin: 10px 0px 15px 0px;
@@ -110,21 +111,29 @@ input{
     color: whitesmoke;
     font-size: 14px;
 }
-input:hover{
+.btn:hover{
     background-color: $color-rosa;
 }
 
+/*---------------------*/
+
 @media (max-width: 500px) {
+    .btnIcon{
+        right: 15px;
+        top: 10px;
+    }
+
     .carta{ 
         width: 95vw;
         height: 85vh;
         position: initial;
-        margin: 12px auto;
+        margin: 55px auto 20px auto;
+        
+        section{
+            width: 95%;
+            justify-content: center !important;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
-    section{
-        width: 95%;
-        justify-content: center !important;
-        margin-left: auto;
-        margin-right: auto;
-    }
-  }
+}
