--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -4,10 +4,10 @@
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
     <div>
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" 
+      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password">
     </div>
-    <a [class]="'forgetPassword'">Olvide mi contraseña</a>
+    <a [class]="'forgetPassword'">Olvide mi password</a>
     <input type="submit" [class]="['buttonLogin']" routerLink="/administrador" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()">
   </div>
 </div>
